# my_bot

./: CMakeLists.txt  README.md  clean_env.sh  cleanup_bashrc.sh  cleanup_workspace.sh  diffbot_system.cpp  frames_2025-04-01_18.49.16.gv  frames_2025-04-01_18.59.40.gv  frames_2025-04-01_19.44.20.gv  frames_2025-04-04_17.54.35.gv  frames_2025-04-04_21.45.20.gv  frames_2025-04-06_22.00.18.gv  frames_2025-04-07_11.47.14.gv  frames_2025-04-07_12.33.03.gv  frames_2025-04-08_01.19.31.gv  frames_2025-04-08_01.52.03.gv  frames_2025-04-08_01.53.40.gv  index  my_bot.xml  my_map_save.pgm  my_map_save.yaml  package.xml  robot.urdf
config/: drive_ot.rviz  fastrtps.xml  gazebo_params.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  twist_mux.yaml  view_bot.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardware/: diffbot_system.cpp
hardware/include/my_bot/: diffbot_system.hpp  wheel.hpp
include/: diffbot_system.cpp
include/Hardware/: diffbot_system.hpp  visibility_control.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/diffdrive_arduino/include/diffdrive_arduino/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
install/diffdrive_arduino/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: diffdrive_arduino
install/diffdrive_arduino/share/ament_index/resource_index/package_run_dependencies/: diffdrive_arduino
install/diffdrive_arduino/share/ament_index/resource_index/parent_prefix_path/: diffdrive_arduino
install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/diffdrive_arduino/share/diffdrive_arduino/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  diffdrive_arduinoConfig-version.cmake  diffdrive_arduinoConfig.cmake
install/diffdrive_arduino/share/diffdrive_arduino/config/: diffbot_controllers.yaml
install/diffdrive_arduino/share/diffdrive_arduino/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/diffdrive_arduino/share/diffdrive_arduino/launch/: diffbot.launch.py  view_robot.launch.py
install/diffdrive_arduino/share/diffdrive_arduino/ros2_control/: diffbot.ros2_control.xacro
install/diffdrive_arduino/share/diffdrive_arduino/rviz/: diffbot.rviz  diffbot_view.rviz
install/diffdrive_arduino/share/diffdrive_arduino/urdf/: diffbot.materials.xacro  diffbot.urdf.xacro  diffbot_description.urdf.xacro
install/my_bot/include/my_bot/: diffbot_system.hpp
install/my_bot/include/my_bot/my_bot/: visibility_control.h
install/my_bot/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: my_bot
install/my_bot/share/ament_index/resource_index/my_bot__pluginlib__plugin/: my_bot
install/my_bot/share/ament_index/resource_index/package_run_dependencies/: my_bot
install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_botExport-noconfig.cmake  export_my_botExport.cmake  my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: drive_ot.rviz  empty.yaml  gazebo_params.yaml  my_controllers.yaml
install/my_bot/share/my_bot/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  ros2_control.xacro
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/my_bot/share/my_bot/launch/: launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
install/my_bot/share/my_bot/worlds/: empty.world  lidar.world  new.world  obstacle.world
install/serial/include/serial/: serial.h  v8stdint.h
install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/serial/share/serial/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  serialConfig-version.cmake  serialConfig.cmake
install/serial/share/serial/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
log/: latest_build  latest_list
src/my_bot/: CMakeLists.txt  README.md
src/my_bot/config/: my_controllers.yaml
src/my_bot/description/: robot.urdf.xacro  ros2_control.xacro
src/my_bot/hardware/: diffbot_system.cpp
src/my_bot/hardware/include/my_bot/: visibility_control.h
src/my_bot/install/: setup.bash  setup.ps1
src/my_bot/install/my_bot/include/my_bot/my_bot/: arduino_comms.hpp  wheel.hpp
src/my_bot/install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
src/my_bot/install/my_bot/share/my_bot/: local_setup.bash  local_setup.zsh  my_bot.xml
src/my_bot/install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake
src/my_bot/install/my_bot/share/my_bot/config/: diffbot_controllers.yaml  view_bot.rviz
src/my_bot/install/my_bot/share/my_bot/description/: robot.urdf.xacro  robot_core.xacro
src/my_bot/install/my_bot/share/my_bot/environment/: path.dsv
src/my_bot/install/my_bot/share/my_bot/launch/: camera.launch.py
src/my_bot/launch/: launch_robot.launch.py  rplidar.launch.py
src/my_bot/log/: latest_build
src/my_bot/worlds/: new.world
src/my_bot/~/dev_ws/src/my_bot/launch/teleop/: teleop_keyboard.launch.py
worlds/: house.world  lid.world  lidar.world  obstacle.world
~/dev_ws/src/my_bot/: fastrtps.xml
~/dev_ws/src/my_bot/config/: joystick.yaml
~/dev_ws/src/my_bot/launch/: teleop.launch.py
(+3 files in other folders)
